updated getSupportedStoreNames with arraylist